[tool.poetry]
name = "vt119schedule"
version = "0.1.0"
description = ""
authors = ["nibezo <nibezo.cs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
vkwave = {url = "https://github.com/fscdev/vkwave/archive/master.zip"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
